--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,6 @@
 # Check https://circleci.com/docs/2.0/language-go/ for more details
 version: 2.1
 orbs:
-  slack: circleci/slack@4.1
   gh: circleci/github-cli@2.5
 
 commands:
@@ -45,7 +44,6 @@ commands:
   
 jobs:
   build:
-
     working_directory: ~/repo
     machine: true
     resource_class: accedian/prod_bes-ubuntu-medium
@@ -136,8 +134,8 @@ jobs:
 
 
 workflows:
-  version: 2
-  build_only:    # FORK workflow --- What if branch workflow 
+  version: 2.1
+  build_only:
     when:
       not:
         and:
