--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,7 +181,8 @@ workflows:
           filters:
             branches:
               only: 
-                - main       
+                - main
+                - master       
                 - /release\/.*/
 
 
