--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@
 version: 2.1
 orbs:
   gh: circleci/github-cli@2.5
-  pca-bes: accedian/pca-bes@1.18.0
+  pca-bes: accedian/pca-bes@1.20.0
 
 # Jobs
 jobs:
@@ -45,67 +45,15 @@ jobs:
     resource_class: accedian/staging_bes-ubuntu-medium
     steps:
       - pca-bes/workspacesetup
+      - pca-bes/push_setup
       - run:
           name: "Push image to GCR"
-          env:
-            C_BRANCH: "$CIRCLE_BRANCH"
-            GC_SERVICE_KEY: "$GCLOUD_SERVICE_KEY"
-            C_USERNAME: "$CIRCLE_USERNAME"
-            GCR_KEY: "$GCR_DOCKER_RW_PASSWORD"
           command: |
-            # SemVer Setup
-            mkdir semver
-            cd semver
-            git clone https://github.com/Accedian/git-semver.git
-            cd git-semver
-            git checkout 3.0.1.5
-            ./install.sh
-            cd ~/repo
-
-            # Docker Login
-            echo "$GC_SERVICE_KEY" | base64 -d  > ${HOME}/gcloud-service-key.json
-            docker login -u _json_key -p "$(echo $GCR_KEY)" https://gcr.io
-            
-            # Determine tagging strategy
-            echo "Now Tagging"
-            git config --global user.email "${C_USERNAME}@accedian.com"
-            git config --global user.name "CircleCI"
-            
-            action=minor
-            
-            if [[ "${C_BRANCH}" =~ release/* ]]; then
-              echo "Triggering a patch"
-              action=patch
-            else
-              echo "Triggering a minor update"
-              action=minor
-            fi
-
-            # Tag locally and export new version tag info
-            git semver $action
-            git describe --tags > current-version
-            export DOCKER_VER=$(git semver get)
-            export BINARY_VER=$(git semver get)
-            git add current-version
-            git commit --amend -m "$(git log --pretty=format:'%s' -n 1)"
-
-            # Update master/release Accedian Repo tag & branch
-            git push origin ${DOCKER_VER}
-            git push origin ${C_BRANCH}
-
-            # Run multi-platform builder & push to gcr.io
-            export DOCKER_CLI_EXPERIMENTAL=enabled
-            docker run --rm --privileged tonistiigi/binfmt:latest --install linux/amd64,linux/arm64/v8
-            docker buildx create --name circleBuilder
-            docker buildx use circleBuilder
-            
             make push
             
             # echo "devhub docker login"
             # echo ${DEVHUB_TOKEN} | docker login -u ${DEVHUB_USER} --password-stdin https://artifactory.devhub-cloud.cisco.com
             # make circleci-devhubpush
-
-            docker buildx rm circleBuilder
 
       - run:
           name: "install helm"
